# timkid

./: README.md  pyproject.toml
citkid/primecam/: .gitignore  _config.py  data_io.py  instrument.py  plot.py  procedures.py  update_fres.py
