[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

name = "citkid"
version = "0.0"
description = "Fork of Logan Foote's citkid for TIM KID analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["kinetic inductance detector"]

  authors = [
    {name = "Logan Foote", email = "lfoote@caltech.edu"},
    {name = "Shubh Agrawal", email = "shubh@sas.upenn.edu"}
  ]

  maintainers = [
    {name = "Logan Foote", email = "lfoote@caltech.edu"},
    {name = "Shubh Agrawal", email = "shubh@sas.upenn.edu"}
  ]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: Apache-2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "pyfftw",
  "numba",
  "paramiko",
  "tqdm",
  "redis",
]

[project.urls]
"Homepage" = "https://github.com/shubhagrawal30/citkid"
"Bug Reports" = "https://github.com/shubhagrawal30/citkid/issues"

[tool.setuptools]
package-data = {}
